error.log
$ make bin
===> src
make[1]: Entering directory 'C:/Users/jackchong/Work/Code/CPP/CGH-STDLIB/src'
g++  -g -std=c++11 -O3 -IC:\Users\jackchong\Work\Code\CPP\CGH-STDLIB/include  -c -o core/FA.o core/FA.cpp
In file included from core/FA.cpp:8:0:
C:\Users\jackchong\Work\Code\CPP\CGH-STDLIB/include/FA.hpp: In member function 'virtual void cgh::NFA::output() const':
C:\Users\jackchong\Work\Code\CPP\CGH-STDLIB/include/FA.hpp:296:39: error: no match for 'operator=' (operand types are 'cgh::StateSetIter {aka std::__detail::_Node_iterator<cgh::State*, true, false>}' and 'std::unordered_set<cgh::State*>::const_iterator {aka std::__detail::_Node_const_iterator<cgh::State*, true, false>}')
             for(iter = stateSet.begin(); iter != stateSet.end(); iter++)
                                       ^
In file included from c:\users\jackchong\mingw\mingw\include\c++\7.2.0\bits\hashtable.h:35:0,
                 from c:\users\jackchong\mingw\mingw\include\c++\7.2.0\unordered_map:47,
                 from C:\Users\jackchong\Work\Code\CPP\CGH-STDLIB/include/FA.hpp:18,
                 from core/FA.cpp:8:
c:\users\jackchong\mingw\mingw\include\c++\7.2.0\bits\hashtable_policy.h:333:12: note: candidate: std::__detail::_Node_iterator<cgh::State*, true, false>& std::__detail::_Node_iterator<cgh::State*, true, false>::operator=(const std::__detail::_Node_iterator<cgh::State*, true, false>&)
     struct _Node_iterator
            ^~~~~~~~~~~~~~
c:\users\jackchong\mingw\mingw\include\c++\7.2.0\bits\hashtable_policy.h:333:12: note:   no known conversion for argument 1 from 'std::unordered_set<cgh::State*>::const_iterator {aka std::__detail::_Node_const_iterator<cgh::State*, true, false>}' to 'const std::__detail::_Node_iterator<cgh::State*, true, false>&'
c:\users\jackchong\mingw\mingw\include\c++\7.2.0\bits\hashtable_policy.h:333:12: note: candidate: std::__detail::_Node_iterator<cgh::State*, true, false>& std::__detail::_Node_iterator<cgh::State*, true, false>::operator=(std::__detail::_Node_iterator<cgh::State*, true, false>&&)
c:\users\jackchong\mingw\mingw\include\c++\7.2.0\bits\hashtable_policy.h:333:12: note:   no known conversion for argument 1 from 'std::unordered_set<cgh::State*>::const_iterator {aka std::__detail::_Node_const_iterator<cgh::State*, true, false>}' to 'std::__detail::_Node_iterator<cgh::State*, true, false>&&'
In file included from core/FA.cpp:8:0:
C:\Users\jackchong\Work\Code\CPP\CGH-STDLIB/include/FA.hpp: In member function 'virtual void cgh::DFA::output() const':
C:\Users\jackchong\Work\Code\CPP\CGH-STDLIB/include/FA.hpp:342:39: error: no match for 'operator=' (operand types are 'cgh::StateSetIter {aka std::__detail::_Node_iterator<cgh::State*, true, false>}' and 'std::unordered_set<cgh::State*>::const_iterator {aka std::__detail::_Node_const_iterator<cgh::State*, true, false>}')
             for(iter = stateSet.begin(); iter != stateSet.end(); iter++)
                                       ^
In file included from c:\users\jackchong\mingw\mingw\include\c++\7.2.0\bits\hashtable.h:35:0,
                 from c:\users\jackchong\mingw\mingw\include\c++\7.2.0\unordered_map:47,
                 from C:\Users\jackchong\Work\Code\CPP\CGH-STDLIB/include/FA.hpp:18,
                 from core/FA.cpp:8:
c:\users\jackchong\mingw\mingw\include\c++\7.2.0\bits\hashtable_policy.h:333:12: note: candidate: std::__detail::_Node_iterator<cgh::State*, true, false>& std::__detail::_Node_iterator<cgh::State*, true, false>::operator=(const std::__detail::_Node_iterator<cgh::State*, true, false>&)
     struct _Node_iterator
            ^~~~~~~~~~~~~~
c:\users\jackchong\mingw\mingw\include\c++\7.2.0\bits\hashtable_policy.h:333:12: note:   no known conversion for argument 1 from 'std::unordered_set<cgh::State*>::const_iterator {aka std::__detail::_Node_const_iterator<cgh::State*, true, false>}' to 'const std::__detail::_Node_iterator<cgh::State*, true, false>&'
c:\users\jackchong\mingw\mingw\include\c++\7.2.0\bits\hashtable_policy.h:333:12: note: candidate: std::__detail::_Node_iterator<cgh::State*, true, false>& std::__detail::_Node_iterator<cgh::State*, true, false>::operator=(std::__detail::_Node_iterator<cgh::State*, true, false>&&)
c:\users\jackchong\mingw\mingw\include\c++\7.2.0\bits\hashtable_policy.h:333:12: note:   no known conversion for argument 1 from 'std::unordered_set<cgh::State*>::const_iterator {aka std::__detail::_Node_const_iterator<cgh::State*, true, false>}' to 'std::__detail::_Node_iterator<cgh::State*, true, false>&&'
core/FA.cpp: In member function 'const NFATransMap cgh::NFA::getTransMapByStateSet(const StateSet&) const':
core/FA.cpp:497:31: error: no match for 'operator=' (operand types are 'cgh::StateSetIter {aka std::__detail::_Node_iterator<cgh::State*, true, false>}' and 'std::unordered_set<cgh::State*>::const_iterator {aka std::__detail::_Node_const_iterator<cgh::State*, true, false>}')
     for(iter = stateSet.begin(); iter != stateSet.end(); iter++)
                               ^
In file included from c:\users\jackchong\mingw\mingw\include\c++\7.2.0\bits\hashtable.h:35:0,
                 from c:\users\jackchong\mingw\mingw\include\c++\7.2.0\unordered_map:47,
                 from C:\Users\jackchong\Work\Code\CPP\CGH-STDLIB/include/FA.hpp:18,
                 from core/FA.cpp:8:
c:\users\jackchong\mingw\mingw\include\c++\7.2.0\bits\hashtable_policy.h:333:12: note: candidate: std::__detail::_Node_iterator<cgh::State*, true, false>& std::__detail::_Node_iterator<cgh::State*, true, false>::operator=(const std::__detail::_Node_iterator<cgh::State*, true, false>&)
     struct _Node_iterator
            ^~~~~~~~~~~~~~
c:\users\jackchong\mingw\mingw\include\c++\7.2.0\bits\hashtable_policy.h:333:12: note:   no known conversion for argument 1 from 'std::unordered_set<cgh::State*>::const_iterator {aka std::__detail::_Node_const_iterator<cgh::State*, true, false>}' to 'const std::__detail::_Node_iterator<cgh::State*, true, false>&'
c:\users\jackchong\mingw\mingw\include\c++\7.2.0\bits\hashtable_policy.h:333:12: note: candidate: std::__detail::_Node_iterator<cgh::State*, true, false>& std::__detail::_Node_iterator<cgh::State*, true, false>::operator=(std::__detail::_Node_iterator<cgh::State*, true, false>&&)
c:\users\jackchong\mingw\mingw\include\c++\7.2.0\bits\hashtable_policy.h:333:12: note:   no known conversion for argument 1 from 'std::unordered_set<cgh::State*>::const_iterator {aka std::__detail::_Node_const_iterator<cgh::State*, true, false>}' to 'std::__detail::_Node_iterator<cgh::State*, true, false>&&'
make[1]: *** [<builtin>: core/FA.o] Error 1
make[1]: Leaving directory 'C:/Users/jackchong/Work/Code/CPP/CGH-STDLIB/src'
make: *** [Makefile:24: bin] Error 1